# desktop_pet

./: Cargo.toml
hooks/: desktop_pet_hook.zsh  desktop_pet_pty.py  desktop_pet_send.py
src/: command_keywords.rs  handle_event.rs  main.rs  pet_ui.rs
