[package]
name = "desktop_pet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
